修复之前提交的错误

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,21 @@ spring.mail.properties.mail.smtp.socketFactory.fallback=false
 ##tomcat端口
 server.port=8090
 ##https证书
-server.ssl.key-store= www.hylovecode.cn.jks
+server.ssl.key-store=www.hylovecode.cn.jks
 server.ssl.key-store-password=614213
-server.ssl.keyStoreType = JKS
+server.ssl.keyStoreType=JKS
+##短信服务配置
+aliyun.sms.product=Dysmsapi
+aliyun.sms.domain=dysmsapi.aliyuncs.com
+aliyun.sms.accessKeyId=LTAINDkx3JNaP1ko
+aliyun.sms.accessKeySecret=N9TIFaZWsQGFDhtI8GfjfkiQ0WmPtI
+aliyun.sms.regionId=cn-hangzhou
+aliyun.sms.endpointName=cn-hangzhou
+aliyun.sms.defaultConnectTimeout=10000
+aliyun.sms.defaultReadTimeout=10000
+aliyun.sms.signName=lizilake
+aliyun.sms.templateCode=SMS_166656136
+#单个数据的大小
+spring.servlet.multipart.max-file-size=2MB
+#总数据的大小
+spring.servlet.multipart.max-request-size=100MB
